# honeypot-M1proj

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
analyzer/: Dockerfile  api.py  classifier.py  exporters.py  profiles.json  storage.py
analyzer/enrichers/: __init__.py  abuseipdb.py  geoip.py
attacks/: assertions.py  py_ssh_bruteforce.py  run_all.sh  run_ftp_brute.sh  run_http_scan.sh  run_ssh_bruteforce.sh
audit/: README.md  p0f_capture.sh  run_audit.sh  score.py
common/hp_common/: __init__.py  events.py
dashboard/: Dockerfile  app.py
datasets/: gen_dataset.py  paths.txt  rockyou-top1000.txt  user-agents-bots.txt  users.txt
docs/: charte-rgpd.md  note-de-cadrage.md  presentation.html  rapport-final.md  rapport.aux  rapport.out  rapport.tex  rapport.toc  script-oral.md  stealth-audit-final.md  stealth-audit-initial.md
honeypots/ftp/: Dockerfile  server.py
honeypots/http/: Dockerfile  app.py
honeypots/ssh/: Dockerfile  fakeshell.py  server.py
schemas/: event.schema.json
shipper/: Dockerfile  shipper.py
tests/: test_classifier.py  test_events.py
