[project]
name = "honeypot-m1spro"
version = "1.0.0"
description = "Honeypot multi-services intelligent — M1SPRO ECOLEIT"
requires-python = ">=3.12"
dependencies = [
  "asyncssh>=2.14",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pyftpdlib>=1.5.9",
  "jsonschema>=4.21",
  "maxminddb>=2.5",
  "httpx>=0.27",
  "plotly>=5.20",
  "dash>=2.16",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "bandit>=1.7",
  "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]  # FastAPI Depends pattern

[tool.pytest.ini_options]
pythonpath = ["common", "analyzer", "honeypots/ssh"]
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests", "attacks"]
# B105/B106: mots de passe "en dur" volontaires (leurres honeypot)
skips = ["B105", "B106"]
